--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 </h2>
                 
                 <p class="mb-6 text-gray-700">
-                    Dil okulu dışı zamanlarda (öğleden sonra, akşamlar, hafta sonları) öneriler. Brandenburg Kapısı ve East Side Gallery'yi zaten gezdiniz, bu yüzden yeni yerlere odaklanın. Prenzlauer Berg, genç ve canlı bir bölge - 25 yaşında bir kadın için ideal kafeler ve sosyal ortamlar. Hava koşullarına göre güncellendi: Bulutlu günlerde iç mekan, güneşli günlerde dış mekan. 23 Ağustos sonrası 3-5 gün için günübirlik geziler eklendi.
+                    Dil okulu dışı zamanlarda (öğleden sonra, akşamlar, hafta sonları) öneriler. Brandenburg Kapısı ve East Side Gallery'yi zaten gezdiniz, bu yüzden yeni yerlere odaklanın. Prenzlauer Berg, genç ve canlı bir bölge - Sizin için ideal kafeler ve sosyal ortamlar. Hava koşullarına göre güncellendi: Bulutlu günlerde iç mekan, güneşli günlerde dış mekan. 23 Ağustos sonrası 3-5 gün için günübirlik geziler eklendi.
                 </p>
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
